--- a/radiosonde-blinky-all.ioc
+++ b/radiosonde-blinky-all.ioc
@@ -2,153 +2,231 @@
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 PB13.GPIOParameters=GPIO_Label
-ProjectManager.ProjectFileName=radiosonde-blinky.ioc
-PB8.GPIOParameters=GPIO_Label
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F100C8Tx
-PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=19
-ProjectManager.NoMain=false
+PB10.Mode=Asynchronous
 RCC.PLLCLKFreq_Value=8000000
-PA9.GPIO_Label=GPS_RXD
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=SPI2_MISO
 PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=NFC_CARRIER_DETECT_EXT_IRQ11
-ProjectManager.DefaultFWLocation=true
+PA3.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ADC_IN6_BUTTON
 PB6.GPIO_Label=T_MEAS_SEL1
-PB12.Locked=true
-ProjectManager.DeletePrevious=true
-PB14.Locked=true
 PB13.GPIO_Label=SPI2_SCK
-PB15.Signal=GPIO_Output
+PB11.Signal=USART3_RX
 PB13.Signal=GPIO_Output
+PB15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=T_MEAS_SEL_MAINTEMP
 PinOutPanel.RotationAngle=0
-PA12.GPIO_Label=POWER_OFF
-RCC.FamilyName=M
 ProjectManager.StackSize=0x400
 PB5.GPIOParameters=GPIO_Label
-PA13.Signal=SYS_JTMS-SWDIO
+Mcu.IP4=USART3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-PB8.GPIO_Label=RED_LED
-PB4.GPIOParameters=GPIO_Label
+Mcu.IP2=RCC
+Mcu.IP3=SYS
 PA15.GPIO_Label=GPS_RESET
-Mcu.IP0=NVIC
-PA11.Locked=true
+PB4.GPIOParameters=GPIO_Label
+Mcu.IP0=ADC1
 PA12.Locked=true
-PA15.Locked=true
-Mcu.IP1=RCC
+Mcu.IP1=NVIC
 PA12.Signal=GPIO_Output
-PA8.GPIO_Label=RCC_MCO_TO_PRESSURE_MODULE
 Mcu.UserConstants=
-ProjectManager.TargetToolchain=STM32CubeIDE
 Mcu.ThirdPartyNb=0
-PB7.GPIOParameters=GPIO_Label
-Mcu.IPNb=3
+Mcu.IPNb=5
 ProjectManager.PreviousToolchain=
-PA9.Signal=GPIO_Output
 PB6.Signal=GPIO_Output
-PB5.Locked=true
+SH.ADCx_IN7.ConfNb=1
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PA10
-Mcu.Pin7=PA11
-ProjectManager.RegisterCallBack=
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB2
 PB13.Locked=true
-Mcu.Pin0=PB12
-Mcu.Pin1=PB13
-Mcu.Pin2=PB14
-Mcu.Pin3=PB15
-Mcu.Pin4=PA8
-PB14.Signal=GPIO_Input
-Mcu.Pin5=PA9
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB2.Signal=GPIO_Output
 PA8.Locked=true
-board=custom
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
 PB12.GPIO_Label=TEMP_MODE_SELECT_START
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 MxDb.Version=DB.6.0.20
-RCC.APB2Freq_Value=8000000
+PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
-MxCube.Version=6.2.0
-PB4.GPIO_Label=HUMI_SEL1
-PB15.GPIO_Label=SPI2_MOSI
 PA14.Mode=Serial_Wire
 File.Version=6
 PA10.GPIO_Label=GPS_TXD
-PA10.GPIOParameters=GPIO_Label
-VP_SYS_VS_Systick.Mode=SysTick
 PB3.GPIOParameters=GPIO_Label
-PA9.Locked=true
 PB7.Signal=GPIO_Output
-PA8.Signal=GPIO_Output
 PB8.Locked=true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA8.Signal=GPIO_Output
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.ADCx_IN6.ConfNb=1
+PB6.GPIOParameters=GPIO_Label
+ProjectManager.HalAssertFull=false
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+ProjectManager.ProjectName=radiosonde-blinky-all
+RCC.PLLMCOFreq_Value=4000000
+PB7.GPIO_Label=GREEN_LED
+Mcu.Package=LQFP48
+PA6.Signal=ADCx_IN6
+PA7.Locked=true
+PA5.Locked=true
+ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=HUMI_MODE_SELECT_START
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+USART3.IPParameters=VirtualMode
+PA10.Signal=GPIO_Input
+PA15.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=HUMI_SEL2
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PC14-OSC32_IN.GPIO_Label=T_MEAS_SEL_HUMITEMP
+PB10.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+ProjectManager.CustomerFirmwarePackage=
+PC14-OSC32_IN.Locked=true
+PB15.Locked=true
+PB3.Locked=true
+PB4.Signal=GPIO_Output
+PA3.Signal=GPIO_Output
+PA2.Locked=true
+PB3.GPIO_Label=HUMI_SEL0
+PA6.GPIOParameters=GPIO_Label
+ProjectManager.ProjectFileName=radiosonde-blinky-all.ioc
+PB8.GPIOParameters=GPIO_Label
+ADC1.Rank-0\#ChannelRegularConversion=1
+PA15.GPIOParameters=GPIO_Label
+Mcu.PinsNb=31
+ProjectManager.NoMain=false
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+PA9.GPIO_Label=GPS_RXD
+PB11.GPIO_Label=EXT_USART_RX_PIN2
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PA11.GPIO_Label=NFC_CARRIER_DETECT_EXT_IRQ11
+ProjectManager.DefaultFWLocation=true
+PB12.Locked=true
+ProjectManager.DeletePrevious=true
+PB14.Locked=true
+PB10.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Output
+PA12.GPIO_Label=POWER_OFF
+RCC.FamilyName=M
+PA13.Signal=SYS_JTMS-SWDIO
+PB8.GPIO_Label=RED_LED
+PA15.Locked=true
+PA11.Locked=true
+PA8.GPIO_Label=RCC_MCO_TO_PRESSURE_MODULE
+PC15-OSC32_OUT.Locked=true
+PB11.Mode=Asynchronous
+ProjectManager.TargetToolchain=STM32CubeIDE
+PB10.GPIO_Label=EXT_USART_TX_PIN3
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+PB7.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_Label
+PA9.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB5.Locked=true
+ProjectManager.RegisterCallBack=
+PC13-TAMPER-RTC.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
+PA1.Signal=GPIO_Input
+PB10.Signal=USART3_TX
+PB14.Signal=GPIO_Input
+PA5.Signal=ADCx_IN5
+board=custom
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=RADIO_NSS
+RCC.APB2Freq_Value=8000000
+MxCube.Version=6.2.0
+PB4.GPIO_Label=HUMI_SEL1
+PB15.GPIO_Label=SPI2_MOSI
+Mcu.Pin30=VP_SYS_VS_Systick
+PA1.GPIO_Label=INPUT_MEASURED_VALUE_COUNT
+PA10.GPIOParameters=GPIO_Label
+VP_SYS_VS_Systick.Mode=SysTick
+PA9.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB15.GPIOParameters=GPIO_Label
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F100C(8-B)Tx
-PB6.GPIOParameters=GPIO_Label
-ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=radiosonde-blinky
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+PA2.Signal=GPIO_Input
+Mcu.Pin24=PB3
 ProjectManager.UnderRoot=true
-RCC.PLLMCOFreq_Value=4000000
+Mcu.Pin25=PB4
+PB2.Locked=true
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 ProjectManager.CoupleFile=false
 PB4.Locked=true
-PB7.GPIO_Label=GREEN_LED
 PB3.Signal=GPIO_Output
-Mcu.Package=LQFP48
+Mcu.Pin22=PA14
 PB5.Signal=GPIO_Output
+Mcu.Pin23=PA15
 RCC.TimSysFreq_Value=8000000
+PA1.Locked=true
+PA7.GPIO_Label=ADC_IN7_HEATING_MONITOR
+Mcu.Pin20=PA12
+ADC1.master=1
+PA3.Locked=true
+Mcu.Pin21=PA13
+PA5.GPIO_Label=ADC_IN5_VBAT
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
+USART3.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
 PA11.Signal=GPIO_Output
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA10.Signal=GPIO_Input
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Signal=GPIO_Output
+PB2.GPIO_Label=PRESSURE_DATAFLASH_NSS
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB6
+Mcu.Pin15=PB15
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB7
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-PB14.GPIOParameters=GPIO_Label
+Mcu.Pin16=PA8
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin19=PA11
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB8
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+SH.ADCx_IN5.0=ADC1_IN5,IN5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA15
-PB5.GPIO_Label=HUMI_SEL2
-Mcu.Pin12=PB3
-Mcu.Pin10=PA14
+ADC1.NbrOfConversionFlag=1
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin10=PB10
 PB7.Locked=true
 PB8.Signal=GPIO_Output
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.ADCx_IN5.ConfNb=1
 RCC.APB1Freq_Value=8000000
-ProjectManager.CustomerFirmwarePackage=
+PA7.GPIOParameters=GPIO_Label
+PB11.Locked=true
 ProjectManager.DeviceId=STM32F100C8Tx
 PB12.GPIOParameters=GPIO_Label
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
-PB15.Locked=true
-PB3.Locked=true
-PB4.Signal=GPIO_Output
-PB3.GPIO_Label=HUMI_SEL0
+PA3.GPIO_Label=T_MEAS_SEL0
+PA7.Signal=ADCx_IN7
+PA6.Locked=true
 isbadioc=false
